sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var nbEch = 0
  do 
  {
  	for(i<- 1 to )  
    
    
    
  } while(nbEch != 0)
}
